--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "raycast-unblock",
+  "type": "module",
   "version": "0.0.0",
   "packageManager": "pnpm@8.14.0",
   "description": "Unblock all features in Raycast Pro Plan",
@@ -44,6 +45,9 @@
     "test": "vitest",
     "typecheck": "tsc --noEmit",
     "prepare": "simple-git-hooks"
+  },
+  "dependencies": {
+    "fastify": "^4.26.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.2",
