--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "consola": "^3.2.3",
+    "destr": "^2.0.2",
     "fastify": "^4.26.0",
     "ofetch": "^1.3.3"
   },
