--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "consola": "^3.2.3",
     "destr": "^2.0.2",
+    "dotenv": "^16.4.1",
     "fastify": "^4.26.0",
     "ofetch": "^1.3.3"
   },
