--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
     "prepare": "simple-git-hooks"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.2.0",
     "consola": "^3.2.3",
     "destr": "^2.0.2",
     "dotenv": "^16.4.1",
     "fastify": "^4.26.0",
+    "fastify-sse-v2": "^3.1.2",
     "ofetch": "^1.3.3"
   },
   "devDependencies": {
@@ -70,6 +72,11 @@
     "unbuild": "^2.0.0",
     "vite": "^5.0.11",
     "vitest": "^1.1.3"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "fastify-sse-v2@3.1.2": "patches/fastify-sse-v2@3.1.2.patch"
+    }
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
