--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,34 +55,37 @@ jobs:
       - name: Typecheck
         run: nr typecheck
 
-  # test:
-  #   runs-on: ${{ matrix.os }}
+  build_test:
+    runs-on: ${{ matrix.os }}
 
-  #   strategy:
-  #     matrix:
-  #       node: [lts/*]
-  #       os: [ubuntu-latest, windows-latest, macos-latest]
-  #     fail-fast: false
+    strategy:
+      matrix:
+        node: [lts/*]
+        os: [ubuntu-latest, windows-latest, macos-latest]
+      fail-fast: false
 
-  #   steps:
-  #     - uses: actions/checkout@v3
+    steps:
+      - uses: actions/checkout@v3
 
-  #     - name: Install pnpm
-  #       uses: pnpm/action-setup@v2
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
 
-  #     - name: Set node ${{ matrix.node }}
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: ${{ matrix.node }}
+      - name: Set node ${{ matrix.node }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
 
-  #     - name: Setup
-  #       run: npm i -g @antfu/ni
+      - name: Setup
+        run: npm i -g @antfu/ni
 
-  #     - name: Install
-  #       run: nci
+      - name: Install
+        run: nci
 
-  #     - name: Build
-  #       run: nr build
+      - name: Build
+        run: nr build
 
-  #     - name: Test
-  #       run: nr test
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: server
+          path: dist/index.mjs
