--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "dotenv": "^16.4.1",
     "fastify": "^4.26.0",
     "fastify-sse-v2": "^3.1.2",
-    "ofetch": "^1.3.3"
+    "ofetch": "^1.3.3",
+    "openai": "^4.26.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.2",
