--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "dev": "unbuild --stub",
     "lint": "eslint .",
     "prepublishOnly": "nr build",
-    "release": "bumpp && npm publish",
+    "release": "bumpp",
     "start": "esno src/index.ts",
     "start:dev": "esno watch src/index.ts",
     "test": "vitest",
