--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@ AI_API_KEY=
 AI_API_ENDPOINT= # If you are using custom API_ENDPOINT
 # AI_MAX_OUTPUT_TOKENS=100
 AI_TEMPERATURE=0.5
-TRANSLATE_TYPE=shortcut # shortcut
+TRANSLATE_TYPE=shortcut # shortcut, ai
