--- a/package.json
+++ b/package.json
@@ -51,13 +51,15 @@
     "fastify": "^4.26.0",
     "fastify-sse-v2": "^3.1.2",
     "ofetch": "^1.3.3",
-    "openai": "^4.26.0"
+    "openai": "^4.26.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.2",
     "@antfu/ni": "^0.21.12",
     "@antfu/utils": "^0.7.7",
     "@types/node": "^20.10.7",
+    "@types/uuid": "^9.0.8",
     "bumpp": "^9.2.1",
     "eslint": "^8.56.0",
     "esno": "^4.0.0",
