--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   ],
   "scripts": {
     "build": "unbuild",
+    "build:rollup": "rollup -c",
     "dev": "unbuild --stub",
     "lint": "eslint .",
     "prepublishOnly": "nr build",
@@ -58,6 +59,10 @@
     "@antfu/eslint-config": "^2.6.2",
     "@antfu/ni": "^0.21.12",
     "@antfu/utils": "^0.7.7",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/node": "^20.10.7",
     "@types/uuid": "^9.0.8",
     "bumpp": "^9.2.1",
@@ -66,7 +71,10 @@
     "lint-staged": "^15.2.0",
     "pnpm": "^8.14.0",
     "rimraf": "^5.0.5",
+    "rollup": "^4.9.6",
+    "rollup-plugin-esbuild": "^6.1.1",
     "simple-git-hooks": "^2.9.0",
+    "tslib": "^2.6.2",
     "typescript": "^5.3.3",
     "unbuild": "^2.0.0",
     "vite": "^5.0.11",
