chore: update env example [skip ci]

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 AI_TYPE= # openai, gemini, custom, copilot
 AI_API_KEY=
-AI_API_ENDPOINT= # If you are using custom API_ENDPOINT
+# OPENAI_BASE_URL= # If you are using custom API_ENDPOINT
 # AI_MAX_OUTPUT_TOKENS=100
 AI_TEMPERATURE=0.5
-TRANSLATE_TYPE=shortcut # shortcut, ai
+TRANSLATE_TYPE=ai # shortcut, ai
 # PORT=3000
