--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.0",
+    "commander": "^12.0.0",
     "consola": "^3.2.3",
     "destr": "^2.0.2",
     "dotenv": "^16.4.1",
@@ -53,7 +54,8 @@
     "fastify-sse-v2": "^3.1.2",
     "ofetch": "^1.3.3",
     "openai": "^4.26.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zx": "^7.2.3"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.2",
