--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "scripts": {
     "build": "unbuild",
     "build:rollup": "rollup -c",
+    "bundle": "sh scripts/single-application.sh",
     "dev": "unbuild --stub",
     "lint": "eslint .",
     "prepublishOnly": "nr build",
