feat: support debug logger

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,13 @@ services:
       - TZ=Asia/Shanghai
       - PORT=3000
       - HOST=0.0.0.0
-      - AI_API_KEY=your_api_key
-      - TRANSLATE_TYPE=ai
-      # ### If you need to use .env file, please uncomment the following line ####
-      # - ENV=./config/.env
-    # ### If you need to use .env file, please uncomment the following line ####
-    # volumes:
-    #   - ./configs/raycast-unblock:/app/config
+      # - AI_API_KEY=your_api_key
+      # - TRANSLATE_TYPE=ai
+      # ## If you need to use .env file, please uncomment the following line ####
+      - env=./config/.env
+    # ## If you need to use .env file, please uncomment the following line ####
+    volumes:
+      - ./configs/raycast-unblock:/app/config
     ports:
       - '3000:3000'
     restart: always
