--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
+# Note: Rename this file to .env and set the values accordingly
+# If you deploy this service on a remote server, it is recommended to set MODE to "remote"
+# If you deploy this service on a remote server, you should set HOST to 0.0.0.0
+
+MODE=local # local, remote
 AI_TYPE= # openai, gemini, custom, copilot
 AI_API_KEY=
-# OPENAI_BASE_URL= # If you are using custom API_ENDPOINT
+# OPENAI_BASE_URL= # If you are using custom OpenAI server
 # AI_MAX_OUTPUT_TOKENS=100
 AI_TEMPERATURE=0.5
 TRANSLATE_TYPE=ai # shortcut, ai
