fix(env): get undefined in env path

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,17 @@ version: '3.8'
 services:
   app:
     container_name: raycast-unblock
+    # ## You can also add arguments to the command line here, such as the following
+    # ## If you need to use .env file, please uncomment the following line ####
+    # command: --env=./config/.env
     image: wibuswee/raycast-unblock:latest
     environment:
       - TZ=Asia/Shanghai
       - PORT=3000
       - HOST=0.0.0.0
+      - DEBUG=true
       # - AI_API_KEY=your_api_key
       # - TRANSLATE_TYPE=ai
-      # ## If you need to use .env file, please uncomment the following line ####
-      - env=./config/.env
     # ## If you need to use .env file, please uncomment the following line ####
     volumes:
       - ./configs/raycast-unblock:/app/config
