feat(translations): support deeplx translator

--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,17 @@
 # If you deploy this service on a remote server, you should set HOST to 0.0.0.0
 
 MODE=local # local, remote
+
 AI_TYPE= # openai, gemini, custom, copilot
 AI_API_KEY=
 # OPENAI_BASE_URL= # If you are using custom OpenAI server
 # AI_MAX_OUTPUT_TOKENS=100
 AI_TEMPERATURE=0.5
-TRANSLATE_TYPE=ai # shortcut, ai
+
 # PORT=3000
 # HOST=127.0.0.1
 DEBUG=false
+
+TRANSLATE_TYPE=deeplx # shortcut, ai, deeplx
+# DEEPLX_PROXY_ENDPOINT=
+# DEEPLX_ACCESS_TOKEN=
