--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.0",
+    "@ifyour/deeplx": "^0.1.17",
     "commander": "^12.0.0",
     "consola": "^3.2.3",
     "destr": "^2.0.2",
