--- a/package.json
+++ b/package.json
@@ -61,8 +61,6 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.2",
-    "@antfu/ni": "^0.21.12",
-    "@antfu/utils": "^0.7.7",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
@@ -74,15 +72,12 @@
     "esno": "^4.0.0",
     "lint-staged": "^15.2.0",
     "pnpm": "^8.14.0",
-    "rimraf": "^5.0.5",
     "rollup": "^4.9.6",
     "rollup-plugin-esbuild": "^6.1.1",
     "simple-git-hooks": "^2.9.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "unbuild": "^2.0.0",
-    "vite": "^5.0.11",
-    "vitest": "^1.1.3"
+    "unbuild": "^2.0.0"
   },
   "pnpm": {
     "patchedDependencies": {
@@ -90,6 +85,7 @@
     }
   },
   "resolutions": {
+    "@babel/traverse": "7.23.9",
     "node-fetch": "./external/node-fetch"
   },
   "simple-git-hooks": {
