chore(deps): remove useless commander and modify package scripts

--- a/package.json
+++ b/package.json
@@ -35,20 +35,17 @@
     "build": "unbuild",
     "build:rollup": "rollup -c",
     "bundle": "sh scripts/single-application.sh",
-    "dev": "unbuild --stub",
+    "dev": "pnpm start:dev",
     "lint": "eslint .",
-    "prepublishOnly": "nr build",
     "release": "bumpp",
     "start": "esno src/index.ts",
     "start:dev": "esno watch src/index.ts",
-    "test": "vitest",
     "typecheck": "tsc --noEmit",
     "prepare": "simple-git-hooks"
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.0",
     "@ifyour/deeplx": "^0.1.17",
-    "commander": "^12.0.0",
     "consola": "^3.2.3",
     "destr": "^2.0.2",
     "dotenv": "^16.4.1",
