feat(libre-translate): support custom libre-translate endpoint

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,8 @@ AI_TEMPERATURE=0.5
 # HOST=127.0.0.1
 DEBUG=false
 
-TRANSLATE_TYPE=deeplx # shortcut, ai, deeplx
+TRANSLATE_TYPE=deeplx # shortcut, ai, deeplx, libre_translate
 # DEEPLX_PROXY_ENDPOINT=
 # DEEPLX_ACCESS_TOKEN=
+LIBRE_TRANSLATE_TYPE=api
+# LIBRE_TRANSLATE_API_KEY=
